--- a/app/src/main/res/layout/activity_subtema.xml
+++ b/app/src/main/res/layout/activity_subtema.xml
@@ -54,5 +54,15 @@
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="16sp" />
+    <TextView
+        android:id="@+id/testA"
+        android:layout_width="107dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/titleSTheme"
+        android:text="Titulo"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
+
 
 </RelativeLayout>
