--- a/app/src/main/res/layout/activity_showsubtemas.xml
+++ b/app/src/main/res/layout/activity_showsubtemas.xml
@@ -46,6 +46,7 @@
                 app:layout_constraintRight_toRightOf="parent"/>
 
             <ImageView
+                android:id="@+id/ThemeIcon"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:src="@drawable/temas_1"
