--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -46,11 +46,13 @@ contiene el contenido individual de cada recyclerview-->
                 android:layout_height="200dp"
                 android:layout_below="@+id/pregunta"
                 android:layout_alignParentLeft="true"
+
                 android:layout_alignParentRight="true"
                 android:layout_marginStart="13dp"
                 android:layout_marginLeft="29dp"
                 android:layout_marginEnd="13dp"
                 android:layout_marginRight="29dp"
+                android:scaleType="centerInside"
                 android:layout_marginBottom="13dp"
                 android:src="@drawable/imgprueba" />
 
